@@ -67,13 +67,15 @@ distcleancheck_listfiles = \
 # The order to do things in.
 # Build explicitly in "." in order to build gawk first, so
 # that `make check' without a prior `make' works.
+#
+# Put 'extension' last, in case building the extensions is not supported.
 SUBDIRS = \
 	. \
 	awklib \
 	doc \
 	po \
-	extension \
-	test
+	test \
+	extension
 
 # what to make and install
 bin_PROGRAMS = gawk
