@@ -1,3 +1,10 @@
+2013-03-01         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (SUBDIRS): Move extension directory to last in case
+	building the extensions is not supported.
+	* configure.ac: Add check for MirBSD and don't even try to run the
+	checks for DYNAMIC if so.
+
 2013-02-28         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Cause profiling / pretty printing to include a list of
